--- a/HelloWorld/nbproject/project.properties
+++ b/HelloWorld/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=hello
+application.vendor=Azariahs
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,10 +25,129 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/hello.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.spring-aop-3.2.1.RELEASE-javadoc.jar=lib/spring-aop-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-aop-3.2.1.RELEASE-sources.jar=lib/spring-aop-3.2.1.RELEASE-sources.jar
+file.reference.spring-aop-3.2.1.RELEASE.jar=lib/spring-aop-3.2.1.RELEASE.jar
+file.reference.spring-aspects-3.2.1.RELEASE-javadoc.jar=lib/spring-aspects-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-aspects-3.2.1.RELEASE-sources.jar=lib/spring-aspects-3.2.1.RELEASE-sources.jar
+file.reference.spring-aspects-3.2.1.RELEASE.jar=lib/spring-aspects-3.2.1.RELEASE.jar
+file.reference.spring-beans-3.2.1.RELEASE-javadoc.jar=lib/spring-beans-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-beans-3.2.1.RELEASE-sources.jar=lib/spring-beans-3.2.1.RELEASE-sources.jar
+file.reference.spring-beans-3.2.1.RELEASE.jar=lib/spring-beans-3.2.1.RELEASE.jar
+file.reference.spring-build-src-3.2.1.RELEASE.jar=lib/spring-build-src-3.2.1.RELEASE.jar
+file.reference.spring-context-3.2.1.RELEASE-javadoc.jar=lib/spring-context-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-context-3.2.1.RELEASE-sources.jar=lib/spring-context-3.2.1.RELEASE-sources.jar
+file.reference.spring-context-3.2.1.RELEASE.jar=lib/spring-context-3.2.1.RELEASE.jar
+file.reference.spring-context-support-3.2.1.RELEASE-javadoc.jar=lib/spring-context-support-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-context-support-3.2.1.RELEASE-sources.jar=lib/spring-context-support-3.2.1.RELEASE-sources.jar
+file.reference.spring-context-support-3.2.1.RELEASE.jar=lib/spring-context-support-3.2.1.RELEASE.jar
+file.reference.spring-core-3.2.1.RELEASE-javadoc.jar=lib/spring-core-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-core-3.2.1.RELEASE-sources.jar=lib/spring-core-3.2.1.RELEASE-sources.jar
+file.reference.spring-core-3.2.1.RELEASE.jar=lib/spring-core-3.2.1.RELEASE.jar
+file.reference.spring-expression-3.2.1.RELEASE-javadoc.jar=lib/spring-expression-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-expression-3.2.1.RELEASE-sources.jar=lib/spring-expression-3.2.1.RELEASE-sources.jar
+file.reference.spring-expression-3.2.1.RELEASE.jar=lib/spring-expression-3.2.1.RELEASE.jar
+file.reference.spring-instrument-3.2.1.RELEASE-javadoc.jar=lib/spring-instrument-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-instrument-3.2.1.RELEASE-sources.jar=lib/spring-instrument-3.2.1.RELEASE-sources.jar
+file.reference.spring-instrument-3.2.1.RELEASE.jar=lib/spring-instrument-3.2.1.RELEASE.jar
+file.reference.spring-instrument-tomcat-3.2.1.RELEASE-javadoc.jar=lib/spring-instrument-tomcat-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-instrument-tomcat-3.2.1.RELEASE-sources.jar=lib/spring-instrument-tomcat-3.2.1.RELEASE-sources.jar
+file.reference.spring-instrument-tomcat-3.2.1.RELEASE.jar=lib/spring-instrument-tomcat-3.2.1.RELEASE.jar
+file.reference.spring-jdbc-3.2.1.RELEASE-javadoc.jar=lib/spring-jdbc-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-jdbc-3.2.1.RELEASE-sources.jar=lib/spring-jdbc-3.2.1.RELEASE-sources.jar
+file.reference.spring-jdbc-3.2.1.RELEASE.jar=lib/spring-jdbc-3.2.1.RELEASE.jar
+file.reference.spring-jms-3.2.1.RELEASE-javadoc.jar=lib/spring-jms-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-jms-3.2.1.RELEASE-sources.jar=lib/spring-jms-3.2.1.RELEASE-sources.jar
+file.reference.spring-jms-3.2.1.RELEASE.jar=lib/spring-jms-3.2.1.RELEASE.jar
+file.reference.spring-orm-3.2.1.RELEASE-javadoc.jar=lib/spring-orm-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-orm-3.2.1.RELEASE-sources.jar=lib/spring-orm-3.2.1.RELEASE-sources.jar
+file.reference.spring-orm-3.2.1.RELEASE.jar=lib/spring-orm-3.2.1.RELEASE.jar
+file.reference.spring-oxm-3.2.1.RELEASE-javadoc.jar=lib/spring-oxm-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-oxm-3.2.1.RELEASE-sources.jar=lib/spring-oxm-3.2.1.RELEASE-sources.jar
+file.reference.spring-oxm-3.2.1.RELEASE.jar=lib/spring-oxm-3.2.1.RELEASE.jar
+file.reference.spring-struts-3.2.1.RELEASE-javadoc.jar=lib/spring-struts-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-struts-3.2.1.RELEASE-sources.jar=lib/spring-struts-3.2.1.RELEASE-sources.jar
+file.reference.spring-struts-3.2.1.RELEASE.jar=lib/spring-struts-3.2.1.RELEASE.jar
+file.reference.spring-test-3.2.1.RELEASE-javadoc.jar=lib/spring-test-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-test-3.2.1.RELEASE-sources.jar=lib/spring-test-3.2.1.RELEASE-sources.jar
+file.reference.spring-test-3.2.1.RELEASE.jar=lib/spring-test-3.2.1.RELEASE.jar
+file.reference.spring-tx-3.2.1.RELEASE-javadoc.jar=lib/spring-tx-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-tx-3.2.1.RELEASE-sources.jar=lib/spring-tx-3.2.1.RELEASE-sources.jar
+file.reference.spring-tx-3.2.1.RELEASE.jar=lib/spring-tx-3.2.1.RELEASE.jar
+file.reference.spring-web-3.2.1.RELEASE-javadoc.jar=lib/spring-web-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-web-3.2.1.RELEASE-sources.jar=lib/spring-web-3.2.1.RELEASE-sources.jar
+file.reference.spring-web-3.2.1.RELEASE.jar=lib/spring-web-3.2.1.RELEASE.jar
+file.reference.spring-webmvc-3.2.1.RELEASE-javadoc.jar=lib/spring-webmvc-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-webmvc-3.2.1.RELEASE-sources.jar=lib/spring-webmvc-3.2.1.RELEASE-sources.jar
+file.reference.spring-webmvc-3.2.1.RELEASE.jar=lib/spring-webmvc-3.2.1.RELEASE.jar
+file.reference.spring-webmvc-portlet-3.2.1.RELEASE-javadoc.jar=lib/spring-webmvc-portlet-3.2.1.RELEASE-javadoc.jar
+file.reference.spring-webmvc-portlet-3.2.1.RELEASE-sources.jar=lib/spring-webmvc-portlet-3.2.1.RELEASE-sources.jar
+file.reference.spring-webmvc-portlet-3.2.1.RELEASE.jar=lib/spring-webmvc-portlet-3.2.1.RELEASE.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.spring-aop-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-aop-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-aop-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-aspects-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-aspects-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-aspects-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-beans-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-beans-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-beans-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-build-src-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-context-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-context-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-context-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-context-support-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-context-support-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-context-support-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-core-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-core-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-core-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-expression-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-expression-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-expression-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-instrument-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-instrument-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-instrument-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-instrument-tomcat-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-instrument-tomcat-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-instrument-tomcat-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-jdbc-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-jdbc-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-jdbc-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-jms-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-jms-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-jms-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-orm-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-orm-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-orm-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-oxm-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-oxm-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-oxm-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-struts-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-struts-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-struts-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-test-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-test-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-test-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-tx-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-tx-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-tx-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-web-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-web-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-web-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-webmvc-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-webmvc-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-portlet-3.2.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-webmvc-portlet-3.2.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-webmvc-portlet-3.2.1.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,11 +172,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=com.azariah.hello.MainClass
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
