--- a/Assessment_01/nbproject/project.properties
+++ b/Assessment_01/nbproject/project.properties
@@ -27,11 +27,51 @@ dist.jar=${dist.dir}/BMICalcTDD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.spring-aop-3.2.1.RELEASE.jar=lib\\spring-aop-3.2.1.RELEASE.jar
+file.reference.spring-aspects-3.2.1.RELEASE.jar=lib\\spring-aspects-3.2.1.RELEASE.jar
+file.reference.spring-beans-3.2.1.RELEASE.jar=lib\\spring-beans-3.2.1.RELEASE.jar
+file.reference.spring-context-3.2.1.RELEASE.jar=lib\\spring-context-3.2.1.RELEASE.jar
+file.reference.spring-context-support-3.2.1.RELEASE.jar=lib\\spring-context-support-3.2.1.RELEASE.jar
+file.reference.spring-core-3.2.1.RELEASE.jar=lib\\spring-core-3.2.1.RELEASE.jar
+file.reference.spring-expression-3.2.1.RELEASE.jar=lib\\spring-expression-3.2.1.RELEASE.jar
+file.reference.spring-instrument-3.2.1.RELEASE.jar=lib\\spring-instrument-3.2.1.RELEASE.jar
+file.reference.spring-instrument-tomcat-3.2.1.RELEASE.jar=lib\\spring-instrument-tomcat-3.2.1.RELEASE.jar
+file.reference.spring-jdbc-3.2.1.RELEASE.jar=lib\\spring-jdbc-3.2.1.RELEASE.jar
+file.reference.spring-jms-3.2.1.RELEASE.jar=lib\\spring-jms-3.2.1.RELEASE.jar
+file.reference.spring-orm-3.2.1.RELEASE.jar=lib\\spring-orm-3.2.1.RELEASE.jar
+file.reference.spring-oxm-3.2.1.RELEASE.jar=lib\\spring-oxm-3.2.1.RELEASE.jar
+file.reference.spring-struts-3.2.1.RELEASE.jar=lib\\spring-struts-3.2.1.RELEASE.jar
+file.reference.spring-test-3.2.1.RELEASE.jar=lib\\spring-test-3.2.1.RELEASE.jar
+file.reference.spring-tx-3.2.1.RELEASE.jar=lib\\spring-tx-3.2.1.RELEASE.jar
+file.reference.spring-web-3.2.1.RELEASE.jar=lib\\spring-web-3.2.1.RELEASE.jar
+file.reference.spring-webmvc-3.2.1.RELEASE.jar=lib\\spring-webmvc-3.2.1.RELEASE.jar
+file.reference.spring-webmvc-portlet-3.2.1.RELEASE.jar=lib\\spring-webmvc-portlet-3.2.1.RELEASE.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.spring-aop-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-aspects-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-beans-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-context-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-context-support-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-core-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-expression-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-instrument-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-instrument-tomcat-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-jdbc-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-jms-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-orm-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-oxm-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-struts-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-test-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-tx-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-web-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-3.2.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-portlet-3.2.1.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
