--- a/MarksApp/src/java/database.properties
+++ b/MarksApp/src/java/database.properties
@@ -4,10 +4,10 @@
 # 2. JDBC Driver: org.apache.derby.jdbc.ClientDriver
 # 3. url FOR DB: jdbc:derby://localhost:1527/dbname
 
-database.url=jdbc:derby://localhost:1527/sample
+database.url=jdbc:derby://localhost:1527/marksDB
 database.generateDdl=true
-database.username=app
-database.password=app
+database.username=marksDB
+database.password=marksDB
 database.showSql=true
 database.platform=org.hibernate.dialect.DerbyDialect
 database.driverClassName=org.apache.derby.jdbc.ClientDriver
