--- a/LiveProductFeedSystem/src/java/database.properties
+++ b/LiveProductFeedSystem/src/java/database.properties
@@ -7,7 +7,7 @@
 database.url=jdbc:derby://localhost:1527/store
 database.generateDdl=true
 database.username=admin1
-database.password=store
+database.password=admin1
 database.showSql=true
 database.platform=org.hibernate.dialect.DerbyDialect
 database.driverClassName=org.apache.derby.jdbc.ClientDriver
