--- a/LiveProductFeedSystem/lib/nblibraries.properties
+++ b/LiveProductFeedSystem/lib/nblibraries.properties
@@ -14,6 +14,26 @@ libs.eclipselinkmodelgen.classpath=\
 libs.eclipselinkmodelgen.displayName=EclipseLink-ModelGen (JPA 2.0)
 libs.eclipselinkmodelgen.prop-maven-dependencies=org.eclipse.persistence:org.eclipse.persistence.jpa.modelgen.processor:2.3.2:jar
 libs.eclipselinkmodelgen.prop-maven-repositories=default:http://download.eclipse.org/rt/eclipselink/maven.repo/
+libs.hibernate-persistence.classpath=\
+    ${base}/hibernate-persistence/antlr-2.7.6.jar;\
+    ${base}/hibernate-persistence/asm.jar;\
+    ${base}/hibernate-persistence/asm-attrs.jar;\
+    ${base}/hibernate-persistence/cglib-2.1.3.jar;\
+    ${base}/hibernate-persistence/commons-collections-2.1.1.jar;\
+    ${base}/hibernate-persistence/org-apache-commons-logging.jar;\
+    ${base}/hibernate-persistence/dom4j-1.6.1.jar;\
+    ${base}/hibernate-persistence/ehcache-1.2.3.jar;\
+    ${base}/hibernate-persistence/jdbc2_0-stdext.jar;\
+    ${base}/hibernate-persistence/jta.jar;\
+    ${base}/hibernate-persistence/hibernate3.jar;\
+    ${base}/hibernate-persistence/hibernate-tools.jar;\
+    ${base}/hibernate-persistence/hibernate-annotations.jar;\
+    ${base}/hibernate-persistence/hibernate-commons-annotations.jar;\
+    ${base}/hibernate-persistence/hibernate-entitymanager.jar;\
+    ${base}/hibernate-persistence/javassist.jar;\
+    ${base}/hibernate-persistence/ejb3-persistence.jar
+libs.hibernate-persistence.displayName=Hibernate JPA
+libs.hibernate-persistence.prop-maven-dependencies=\n                org.hibernate:hibernate:3.2.5.ga:jar\n                org.hibernate:ejb3-persistence:1.0.1.GA:jar\n                org.hibernate:hibernate-entitymanager:3.3.2.GA:jar\n                javax.sql:jdbc-stdext:2.0:jar\n                javax.transaction:jta:1.0.1B:jar\n            
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
@@ -21,3 +41,9 @@ libs.javaee-endorsed-api-6.0.classpath=\
 libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.testng.classpath=\
+    ${base}/testng/testng-6.5.1-dist.jar
+libs.testng.displayName=TestNG 6.5.1
+libs.testng.javadoc=\
+    ${base}/testng/testng-6.5.1-javadoc.zip
+libs.testng.prop-maven-dependencies=org.testng:testng:6.5.2:jar
