--- a/LiveProductFeedSystem/lib/nblibraries.properties
+++ b/LiveProductFeedSystem/lib/nblibraries.properties
@@ -41,6 +41,11 @@ libs.javaee-endorsed-api-6.0.classpath=\
 libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.jpa20-persistence.classpath=\
+    ${base}/jpa20-persistence/javax.persistence-2.0.3.jar
+libs.jpa20-persistence.displayName=Persistence (JPA 2.0)
+libs.jpa20-persistence.prop-maven-dependencies=org.eclipse.persistence:javax.persistence:2.0.3:jar
+libs.jpa20-persistence.prop-maven-repositories=default:http://download.eclipse.org/rt/eclipselink/maven.repo/
 libs.testng.classpath=\
     ${base}/testng/testng-6.5.1-dist.jar
 libs.testng.displayName=TestNG 6.5.1
