Domain altered, Factories altered and three extra CRUD service tests created

--- a/LiveProductFeedSystem/nbproject/project.properties
+++ b/LiveProductFeedSystem/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.jboss-logging-3.1.0.CR2.jar=lib/jboss-logging-3.1.0.CR2.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.joda-time-2.1-javadoc.jar=lib/joda-time-2.1-javadoc.jar
 file.reference.joda-time-2.1.jar=lib/joda-time-2.1.jar
+file.reference.jstl-1.2.jar=lib/jstl-1.2.jar
 file.reference.log4j-1.2.16.jar=lib/log4j-1.2.16.jar
 file.reference.mockito-all-1.9.5.jar=lib/mockito-all-1.9.5.jar
 file.reference.org.springframework.aop-3.1.1.RELEASE.jar=lib/org.springframework.aop-3.1.1.RELEASE.jar
@@ -110,7 +111,8 @@ javac.classpath=\
     ${file.reference.org.springframework.test-3.1.1.RELEASE.jar}:\
     ${file.reference.org.springframework.transaction-3.1.1.RELEASE.jar}:\
     ${file.reference.org.springframework.web-3.1.1.RELEASE.jar}:\
-    ${file.reference.org.springframework.web.servlet-3.1.1.RELEASE.jar}
+    ${file.reference.org.springframework.web.servlet-3.1.1.RELEASE.jar}:\
+    ${file.reference.jstl-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
