Web control, model and facade added for Category. Persistence is successful. Does not redirect to the result page.

--- a/LiveProductFeedSystem/nbproject/project.properties
+++ b/LiveProductFeedSystem/nbproject/project.properties
@@ -112,7 +112,10 @@ javac.classpath=\
     ${file.reference.org.springframework.transaction-3.1.1.RELEASE.jar}:\
     ${file.reference.org.springframework.web-3.1.1.RELEASE.jar}:\
     ${file.reference.org.springframework.web.servlet-3.1.1.RELEASE.jar}:\
-    ${file.reference.jstl-1.2.jar}
+    ${file.reference.jstl-1.2.jar}:\
+    ${libs.jsf20.classpath}:\
+    ${libs.jstl11.classpath}:\
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
