--- a/LiveProductFeedSystem/lib/nblibraries.properties
+++ b/LiveProductFeedSystem/lib/nblibraries.properties
@@ -46,6 +46,24 @@ libs.jpa20-persistence.classpath=\
 libs.jpa20-persistence.displayName=Persistence (JPA 2.0)
 libs.jpa20-persistence.prop-maven-dependencies=org.eclipse.persistence:javax.persistence:2.0.3:jar
 libs.jpa20-persistence.prop-maven-repositories=default:http://download.eclipse.org/rt/eclipselink/maven.repo/
+libs.jsf20.classpath=\
+    ${base}/jsf20/javax.faces.jar
+libs.jsf20.displayName=JSF 2.1
+libs.jsf20.javadoc=\
+    ${base}/jsf20/javaee6-doc-api.zip
+libs.jsf20.prop-maven-dependencies=org.glassfish:javax.faces:2.1.13:jar
+libs.jstl11.classpath=\
+    ${base}/jstl11/standard.jar;\
+    ${base}/jstl11/jstl.jar
+libs.jstl11.displayName=JSTL 1.1
+libs.jstl11.javadoc=\
+    ${base}/jstl11/javaee6-doc-api.zip
+libs.jstl11.prop-maven-dependencies=\n                javax.servlet:jstl:1.1.2:jar\n                taglibs:standard:1.1.2:jar\n            
+libs.primefaces.classpath=\
+    ${base}/primefaces/primefaces-3.4.jar
+libs.primefaces.displayName=PrimeFaces 3.4
+libs.primefaces.prop-maven-dependencies=org.primefaces:primefaces:3.4:jar
+libs.primefaces.prop-maven-repositories=default:http://repository.primefaces.org/
 libs.testng.classpath=\
     ${base}/testng/testng-6.5.1-dist.jar
 libs.testng.displayName=TestNG 6.5.1
