--- a/LiveProductFeedSystem/nbproject/project.properties
+++ b/LiveProductFeedSystem/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_present=true
 auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -93,8 +94,8 @@ javac.classpath=\
     ${file.reference.javassist-3.15.0-GA.jar}:\
     ${file.reference.jboss-logging-3.1.0.CR2.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
-    ${file.reference.joda-time-2.1-javadoc.jar}:\
     ${file.reference.joda-time-2.1.jar}:\
+    ${file.reference.joda-time-2.1-javadoc.jar}:\
     ${file.reference.log4j-1.2.16.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.org.springframework.aop-3.1.1.RELEASE.jar}:\
@@ -140,6 +141,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
+javadoc.reference.joda-time-2.1.jar=lib/joda-time-2.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -155,6 +157,7 @@ run.test.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
 source.encoding=UTF-8
+source.reference.joda-time-2.1.jar=lib/joda-time-2.1-sources.jar
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
