Login working. User STOCKMANAGER role is set, but won't log in. Needs fixing.

--- a/LiveProductFeedSystem/web/WEB-INF/web.xml
+++ b/LiveProductFeedSystem/web/WEB-INF/web.xml
@@ -18,6 +18,18 @@
         <param-value>false</param-value>
     </context-param>
     
+    <!-- SECURITY FILTER -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+        <!-- SECURITY FILTER -->
+        
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
