--- a/LiveProductFeedSystem/nbproject/project.properties
+++ b/LiveProductFeedSystem/nbproject/project.properties
@@ -68,12 +68,34 @@ file.reference.org.springframework.test-3.1.1.RELEASE.jar=lib/org.springframewor
 file.reference.org.springframework.transaction-3.1.1.RELEASE.jar=lib/org.springframework.transaction-3.1.1.RELEASE.jar
 file.reference.org.springframework.web-3.1.1.RELEASE.jar=lib/org.springframework.web-3.1.1.RELEASE.jar
 file.reference.org.springframework.web.servlet-3.1.1.RELEASE.jar=lib/org.springframework.web.servlet-3.1.1.RELEASE.jar
+file.reference.spring-security-acl-3.1.2.RELEASE-javadoc.jar=lib/spring-security-acl-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-acl-3.1.2.RELEASE.jar=lib/spring-security-acl-3.1.2.RELEASE.jar
+file.reference.spring-security-aspects-3.1.2.RELEASE-javadoc.jar=lib/spring-security-aspects-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-aspects-3.1.2.RELEASE.jar=lib/spring-security-aspects-3.1.2.RELEASE.jar
+file.reference.spring-security-cas-3.1.2.RELEASE-javadoc.jar=lib/spring-security-cas-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-cas-3.1.2.RELEASE.jar=lib/spring-security-cas-3.1.2.RELEASE.jar
+file.reference.spring-security-config-3.1.2.RELEASE-javadoc.jar=lib/spring-security-config-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-config-3.1.2.RELEASE.jar=lib/spring-security-config-3.1.2.RELEASE.jar
+file.reference.spring-security-core-3.1.2.RELEASE-javadoc.jar=lib/spring-security-core-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-core-3.1.2.RELEASE.jar=lib/spring-security-core-3.1.2.RELEASE.jar
+file.reference.spring-security-crypto-3.1.2.RELEASE-javadoc.jar=lib/spring-security-crypto-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-crypto-3.1.2.RELEASE.jar=lib/spring-security-crypto-3.1.2.RELEASE.jar
+file.reference.spring-security-ldap-3.1.2.RELEASE-javadoc.jar=lib/spring-security-ldap-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-ldap-3.1.2.RELEASE.jar=lib/spring-security-ldap-3.1.2.RELEASE.jar
+file.reference.spring-security-openid-3.1.2.RELEASE-javadoc.jar=lib/spring-security-openid-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-openid-3.1.2.RELEASE.jar=lib/spring-security-openid-3.1.2.RELEASE.jar
+file.reference.spring-security-remoting-3.1.2.RELEASE-javadoc.jar=lib/spring-security-remoting-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-remoting-3.1.2.RELEASE.jar=lib/spring-security-remoting-3.1.2.RELEASE.jar
+file.reference.spring-security-taglibs-3.1.2.RELEASE-javadoc.jar=lib/spring-security-taglibs-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-taglibs-3.1.2.RELEASE.jar=lib/spring-security-taglibs-3.1.2.RELEASE.jar
+file.reference.spring-security-web-3.1.2.RELEASE-javadoc.jar=lib/spring-security-web-3.1.2.RELEASE-javadoc.jar
+file.reference.spring-security-web-3.1.2.RELEASE.jar=lib/spring-security-web-3.1.2.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -118,7 +140,29 @@ javac.classpath=\
     ${file.reference.jstl-1.2.jar}:\
     ${libs.jstl11.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${libs.jsf20.classpath}
+    ${libs.jsf20.classpath}:\
+    ${file.reference.spring-security-acl-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-acl-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-aspects-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-aspects-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-cas-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-cas-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-config-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-config-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-core-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-core-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-crypto-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-crypto-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-ldap-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-ldap-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-openid-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-openid-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-remoting-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-remoting-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-taglibs-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-taglibs-3.1.2.RELEASE.jar}:\
+    ${file.reference.spring-security-web-3.1.2.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-security-web-3.1.2.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
