--- a/LiveProductFeedSystem/nbproject/project.properties
+++ b/LiveProductFeedSystem/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_present=true
 auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activemq-all-5.8.0.jar=lib/activemq-all-5.8.0.jar
 file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
 file.reference.aopalliance-1.0.jar=lib/aopalliance-1.0.jar
 file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
@@ -95,7 +96,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -162,7 +163,8 @@ javac.classpath=\
     ${file.reference.spring-security-taglibs-3.1.2.RELEASE-javadoc.jar}:\
     ${file.reference.spring-security-taglibs-3.1.2.RELEASE.jar}:\
     ${file.reference.spring-security-web-3.1.2.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-security-web-3.1.2.RELEASE.jar}
+    ${file.reference.spring-security-web-3.1.2.RELEASE.jar}:\
+    ${file.reference.activemq-all-5.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
